# ai-rem-poc

./: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  env.dev  env.sample  main.py  pyproject.toml  setup.sh
app/: __init__.py  config.py
app/api/endpoints/: config.py  scans.py
app/database/: __init__.py  connection.py  models.py
app/models/: __init__.py  core.py  exceptions.py
app/orchestrators/: __init__.py  scan_orchestrator.py
app/prompts/: analysis_prompts.py  prompt_config.py  prompt_manager.py
app/services/: __init__.py  analysis_engine.py  aws_adapter.py  cache_service.py  database_service.py  heuristics.py  rag_service.py
app/tasks/: celery_app.py  scan_tasks.py
aws-policies/: iam-scanner-policy.json  trust-policy-template.json
data/AWS/IAM/: Policies_and_permissions_in_AWS_Identity_and_Access_Management.md  Security_best_practices_in_IAM.md
data/TrendMicro/AWS/: ACM_Certificate_Expired.md  AWS.md  AWS_ACM_Certificates_Renewal_(30_days_before_expiration).md  AWS_Certificate_Manager.md  Alibaba_Cloud.md  (+1 more)
docs/: MANUAL_AWS_SETUP.md  aws_integration.md  compliance_sources.md  compliance_usage.md  knowledge_base_summary.md  local_dev.md  model_selection.md  prompt_manager.md  rag_pipeline.md  system_overview.md
scripts/: __init__.py  cleanup_trendmicro_references.py  dev-setup.sh  ingest_knowledge.py  init_db.py  populate_knowledge_base.py  reset_db.sh  run-app.sh  run-worker.sh  scrape_compliance_sources.py  setup-aws-integration.sh  setup_db.sh  setup_knowledge_base.py
tests/: test_analysis_engine.py  test_aws_adapter.py
(+7 files in other folders)
